overflow fixed

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,12 +11,18 @@
   &__body {
     background: #fff;
     margin: 0;
+
+    &--with-menu {
+      overflow: hidden;
+    }
   }
+
   &__menu {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    bottom: 0;
 
     transform: translateX(-100%);
     transition: transform cubic-bezier(0.07,0.43,0.77,1.29) 800ms;
